# LongDemo

./: .directory  LongDemo.pro  LongDemo.pro.user.3a9070a  README.md  dialog.cpp  dialog.h  halldialog.cpp  halldialog.h  main.cpp  tabconfig.cpp
Client/: Client.pro  Login_Gui.qml  Login_Gui.ui.qml  MainForm.ui.qml  cglobaldata.cpp  cglobaldata.h  login_gui.cpp  login_gui.h  main.cpp  main.qml  qml.qrc  socketthread.cpp  socketthread.h
ProtocolLogic/: Ld_Socket.cpp  Ld_Socket.h  Logplus.cpp  Logplus.h  Socket.cpp  Socket.h  SysFunction.cpp  SysFunction.h  protocol.h  sysfun.cpp  sysfun.h
QtBsClient/: QtBsClient.pro  logindialog.h  mainwindow.cpp  regdlg.cpp  regdlg.h  regdlg.ui  sysfun.cpp  sysfun.h
QtClient/: Config.xml  QtClient.pro  QtClient.pro.user.1f3c1f5  QtClient.pro.user.d401702  cgamedata.cpp  cgamedata.h  dialog.cpp  dialog.h  halldialog.cpp  halldialog.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.h  regdlg.cpp  sysfun.cpp  sysfun.h  sysfunction.cpp  sysfunction.h  tabconfig.h
QtClient1/: QtClient.pro.user.6cb9894  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  regdlg.cpp  regdlg.h
QtServer/: Makefile  QtServer.pro  QtServer.pro.user.1f3c1f5  longserver.cpp  longserver.h  main.cpp
QtServer/QtServer/: CMakeLists.txt
QtServer/QtServer-build/: CMakeCache.txt  Makefile  QtServer  QtServer.cbp  cmake_install.cmake
Server/: CMakeLists.txt  main.cpp
Server-build/: CMakeCache.txt  Makefile  Server.cbp  cmake_install.cmake
Server-build/src/: Makefile  cmake_install.cmake
Server/src/: CMakeLists.txt  SysFunction.cpp  SysFunction.h  ThreadPool.cpp  ThreadPool.h
jsoncpp/source/: json_reader.cpp  json_value.cpp  json_writer.cpp
